--- a/iOSBase/Modules/Home/Controllers/PurchaseCenterViewController.xib
+++ b/iOSBase/Modules/Home/Controllers/PurchaseCenterViewController.xib
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PurchaseCenterViewController">
             <connections>
+                <outlet property="b_label" destination="85a-n6-3eM" id="dCu-23-Bl5"/>
+                <outlet property="head_img" destination="bac-b6-Jaw" id="GgG-0W-0Zg"/>
                 <outlet property="tableView" destination="rUC-H7-WpL" id="XgI-At-uzb"/>
                 <outlet property="view" destination="2ch-yz-iBr" id="oUU-pJ-9fL"/>
             </connections>
